fixed weird issue with items jumping on explore pages.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -533,8 +533,7 @@ footer {
   visibility: hidden; }
 
 .desc_ImageOverlay:hover .desc button {
-  color: black;
-  border-radius: 10px; }
+  color: black; }
 
 .empty {
   height: 114px; }
