--- a/sass/_art.scss
+++ b/sass/_art.scss
@@ -39,7 +39,7 @@
 
 .desc_ImageOverlay:hover .desc button{
   color: black;
-  border-radius: 10px;
+  // border-radius: 10px;
 }
 .empty{
       height: 114px;
